crates/alder-codegen/src/snapshots/alder_codegen__tests__recursive_option_fields_use_kernel_wrapping.snap
---
source: crates/alder-codegen/src/lib.rs
description: "pub fn main() {\n    let value: { nested: Option[Option[Number]] } = { nested: 42 }\n    value\n}\n"
---
import { $optionSome } from "alder:kernel";
function $v_main() {
	const $t0 = { "nested": $optionSome($optionSome(42)) };
	let $l0_value = $t0;
	return $l0_value;
}
export { $v_main as main };
