crates/alder-codegen/src/snapshots/alder_codegen__tests__result_extern_is_guarded.snap
---
source: crates/alder-codegen/src/lib.rs
description: "#[extern(\"library\", \"parse\")]\npub fn parse(value: String) -> Result[Number, String]\n"
---
import { $tryCatch } from "alder:kernel";
import { parse as $x_library_parse } from "library";
function $v_parse($a0) {
	return $tryCatch(() => {
		return $x_library_parse($a0);
	});
}
export { $v_parse as parse };
