crates/alder-codegen/src/snapshots/alder_codegen__tests__solved_primitive_equality_is_strict.snap
---
source: crates/alder-codegen/src/lib.rs
description: "pub fn same() -> Bool { 1 == 2 }"
---
function $v_same() {
	const $t0 = 1;
	return $t0 === 2;
}
export { $v_same as same };
