crates/alder-codegen/src/snapshots/alder_codegen__tests__structural_error_equality_uses_runtime_tag_names.snap
---
source: crates/alder-codegen/src/lib.rs
description: "pub fn same(left: Result[Number, [:payload(Number, String)]], right: Result[Number, [:payload(Number, String)]]) Bool {\n    left == right\n}\n"
---
import { $equalStructural } from "alder:kernel";
function $v_same($a0, $a1) {
	let $l0_left = $a0;
	let $l1_right = $a1;
	const $t0 = $l0_left;
	return { "eq": ($a, $b) => {
		return $equalStructural($a, $b, "result", [], [{ "eq": ($a, $b) => {
			return $a === $b;
		} }, { "eq": ($a, $b) => {
			return $equalStructural($a, $b, "error_row", [":payload:0", ":payload:1"], [{ "eq": ($a, $b) => {
				return $a === $b;
			} }, { "eq": ($a, $b) => {
				return $a === $b;
			} }]);
		} }]);
	} }["eq"]($t0, $l1_right);
}
export { $v_same as same };
